--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
   background-color: #f0e6d8ff;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 a{
   text-decoration: none;
@@ -17,7 +17,7 @@ a{
   top: 4vw;
   margin: 0;
   padding: 0;
-  position: fixed;
+  position: absolute;
 }
 .navbar{
   display: flex;
@@ -134,24 +134,28 @@ a{
 #faceli{
   grid-area: 1/1/5/4;
   background-color: #34344A;
+  margin-left: 1vw;
+  margin-top: 1vw;
   border: #34344A;
   border-width: .5vw;
-  border-bottom-right-radius: 1vw;
+  border-radius: 1vw;
   border-style: solid;
   padding-top: 1.4vw;
+  text-align: center;
 }
 #hairli{
   grid-area: 1/8/4/12;
   background-color: #80475E;
+  margin-top: 1vw;
   border: #80475E;
   border-width: .5vw;
-  border-bottom-right-radius: 1vw;
-  border-bottom-left-radius: 1vw;
+  border-radius: 1vw;
   border-style: solid;
   text-align: center;
 }
 #handsli{
   grid-area: 6/11/9/15;
+  margin-right: 1vw;
   background-color: #CC5A71;
   border: #CC5A71;
   border-width: .5vw;
@@ -196,16 +200,14 @@ a img{
   border-width: .5vw;
 }
 #faceCover{
-  width: 21vw;
-  height: 12vw;
-  border-bottom-right-radius: 1vw;
-  border-top-right-radius: 1vw;
-  margin-left: -1.8vw;
+  height: 11vw;
+  border-radius: 1vw;
   margin-top: 1.4vw;
 }
 #hairCover{
   border-radius: 1vw;
   margin-top: .4vw;
+  height: 9vw;
 }
 #handsCover{
   border-radius: 1vw;
